fix overflow, responsive and spacing bugs

--- a/wp-content/themes/labor-day/src/styles/components/_header.scss
+++ b/wp-content/themes/labor-day/src/styles/components/_header.scss
@@ -3,8 +3,6 @@
 @use "bootstrap/scss/vendor/rfs" as rfs;
 
 .logo-image {
-	@include m.fitMedia(svg);
-	padding: 0.625rem;
 	height: 9.375rem;
 }
 
